<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_scan"
                android:icon="@drawable/search"
                android:title="@string/menu_device_list"
            />
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about"
                android:title="@string/menu_about"/>
        <item
                android:id="@+id/nav_options"
                android:icon="@drawable/settings"
                android:title="@string/menu_options"/>
        <item
                android:id="@+id/nav_log"
                android:icon="@drawable/logs"
                android:title="@string/menu_logs"/>
    </group>

</menu>
